k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudwatch-logs-viewer
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:<ACCOUNT_ID>:certificate/882cd935-3c94-4256-a2a6-ef8fb25d7958
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/tags: Environment=production,Application=cloudwatch-logs-viewer
spec:
  ingressClassName: alb
  rules:
  - host: log-shipper-app.<ACCOUNT_ID>.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudwatch-logs-viewer
            port:
              number: 80
